<resources>
    <string name="app_name">MalosHabitos</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="adios_malos_habitos">Adios Malos Hábitos</string>
    <string name="bienvenido_menu">BIENVENIDO</string>
    <string name="registrar_malos_h">Registrar Malos Hábitos</string>
    <string name="metas">Metas</string>
    <string name="desafios_diarios">Desafíos Diarios</string>
    <string name="registrate">¿No tienes cuenta? Regístrate</string>
    <string name="ingresa_tu_nombre_login">Ingresa tu nombre</string>
    <string name="malos_habitos_app">Malos Hábitos App</string>
    <string name="ingresa_tu_contrasena">Ingresa tu contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="nombreRegistro">Nombre</string>


    <!-- Cadenas para la selección de malos hábitos -->
    <string name="selecciona_tus_malos_habitos">Selecciona Tus Malos Hábitos</string>
    <string name="fumar">Fumar</string>
    <string name="alcohol">Alcohol</string>
    <string name="mala_higiene">Mala Higiene</string>
    <string name="cafeina">Consumo de Cafeína</string>
    <string name="interrumpir">Interrumpir a otros</string>
    <string name="mal_dormir">Dormir a deshoras</string>
    <string name="comer_mal">Comer a deshoras</string>
    <string name="no_agua">No beber agua</string>
    <string name="mala_alimentacion">Mala Alimentación</string>
    <string name="poco_ejercicio">Poco Ejercicio</string>
    <string name="volver">Volver</string>
    <string name="siguiente">Siguiente</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo Electrónico</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="registrarse">Registrarse</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="s">Sí</string>
    <string name="estos_has_seleccionado">Estos Has Seleccionado</string>
    <string name="estas_seguro_que_son_tus_malos_habitos">¿Estás Seguro que son tus malos hábitos?</string>
    <string name="no_volver">No, Volver</string>
    <string name="registrar_malos_habitos">Registrar Malos Hábitos</string>
    <string name="contexto">Bienvenido a \'Malos Hábitos\', la aplicación creada para apoyarte en el proceso de transformar hábitos negativos en hábitos más saludables. Con nuestra app, podrás identificar, registrar y monitorear los hábitos que deseas cambiar, todo de manera sencilla y organizada. ¿Listo para comenzar? Solo pulsa en el menú de la parte superior derecha para explorar las opciones y empezar a transformar tus hábitos hoy mismo.</string>
    <string name="notificacion_anuncio_progreso">Desafío en progreso. Revisa tu progreso en \'Progresos\'.</string>
    <string name="metas_nav">Metas</string>
    <string name="desafio_diario_actual">Desafío Diario Actual</string>
    <string name="reflexiones_diarias">Reflexiones Diarias</string>
    <string name="reflexiones_guardadas">Reflexiones guardadas</string>
    <string name="guardar_reflexion">Guardar Reflexión</string>
    <string name="escribe_tu_reflexion">Escribe tu reflexión</string>
    <string name="prox_desafio">Próximo desafío disponible en 20 segundos.</string>
    <string name="desafio_en_progreso">Desafío en progreso: %1$s</string>
    <string name="casi_por_terminar">Casi por Terminar</string>
    <string name="D_diarios">Desafíos Diarios</string>
</resources>
